# player

./: CMakeLists.txt  Makefile  README  keyboard_thread.c  player.c  player.h  player_priv.c  player_priv.h  player_testsuite.c
include/: player.h  player_priv.h
src/: CMakeLists.txt  keyboard_thread.c  player.c  player_priv.c
